--- a/Documents/Git/trabajo rpc/web_app/src/components/GestionUsuarios.css
+++ b/Documents/Git/trabajo rpc/web_app/src/components/GestionUsuarios.css
@@ -174,3 +174,13 @@
   cursor: not-allowed;
   opacity: 0.5;
 }
+
+.input-busquedas{
+		input{
+		padding: 0.6rem;
+	    border: 1px solid #ccc;
+	    border-radius: 6px;
+	    outline: none;
+	    transition: 0.2s;
+	}
+}
