--- a/Documents/Git/trabajo rpc/web_app/src/components/Donaciones.css
+++ b/Documents/Git/trabajo rpc/web_app/src/components/Donaciones.css
@@ -6,13 +6,30 @@
 }
 
 .input-row {
-  display: flex;
-  gap: 8px;
   margin-bottom: 8px;
+  justify-content: space-evenly;
 }
 
 input {
-  padding: 4px 8px;
+  padding: 0.6rem;
+  margin: 0.5rem;
+  border: 1px solid #ccc;
+  border-radius: 6px;
+  outline: none;
+  transition: 0.2s;
+}
+.donacion-btn{
+  background-color: #0b3d91;
+  color: white;
+  border: none;
+  border-radius: 6px;
+  padding: 0.5rem 1rem;
+  cursor: pointer;
+  font-weight: bold;
+  transition: background-color 0.2s;
+}
+  button:hover {
+    background-color: #092b6b;
 }
 
 button {
@@ -21,7 +38,38 @@ button {
 
 ul {
   margin-top: 8px;
-  padding-left: 20px;
+  padding: 0px;
+  list-style: none;
+  background-color: #f9fafb;
+  border: 1px solid #e5e7eb;
+  border-radius: 8px;
+
+  .list-solicitudes{
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+
+    padding: 0.6rem 1rem;
+    border-bottom: 1px solid #e5e7eb;
+    color: #1f2937;
+    font-size: 0.95rem;
+
+    transition: background-color 0.2s ease;
+
+    &:hover {
+      background-color: #eef3fb;
+    }
+
+    li{
+      list-style: none;
+
+      &:hover {
+      background-color: #eef3fb;
+    }
+    }
+  }
 }
 
 .mensaje {
