--- a/Documents/Git/trabajo rpc/web_app/src/components/Evento.css
+++ b/Documents/Git/trabajo rpc/web_app/src/components/Evento.css
@@ -1,52 +1,56 @@
 /* Card general */
-.evento-card, .usuario-card {
+.evento-card,
+.usuario-card {
   background-color: #fff;
   border-radius: 12px;
   padding: 1.5rem 2rem;
   margin: 1rem auto;
-  box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
   max-width: 700px;
 }
 
-.crear-evento,.donacion-form, .evento-actions, .editar-evento-form{
-    input, select{
-		  padding: 0.6rem;
-      margin: 0.5rem;
-	    border: 1px solid #ccc;
-	    border-radius: 6px;
-	    outline: none;
-	    transition: 0.2s;
-    }
-    button{
-      margin: 0.5rem;
-	    padding: 0.6rem 1.2rem;
-      background-color: #0b3d91;
-      color: white;
-      border: none;
-      border-radius: 6px;
-      padding: 0.4rem 0.8rem;
-      cursor: pointer;
-      font-size: 0.85rem;
-      transition: background-color 0.2s;
-    }
-    button:hover {
+.crear-evento,
+.donacion-form,
+.evento-actions,
+.editar-evento-form {
+  input,
+  select {
+    padding: 0.6rem;
+    margin: 0.5rem;
+    border: 1px solid #ccc;
+    border-radius: 6px;
+    outline: none;
+    transition: 0.2s;
+  }
+  button {
+    margin: 0.5rem;
+    padding: 0.6rem 1.2rem;
+    background-color: #0b3d91;
+    color: white;
+    border: none;
+    border-radius: 6px;
+    padding: 0.4rem 0.8rem;
+    cursor: pointer;
+    font-size: 0.85rem;
+    transition: background-color 0.2s;
+  }
+  button:hover {
     background-color: #092b6b;
-}
+  }
 }
 
 .evento-btn button {
-    margin: 0.5rem;
-	  padding: 0.6rem 1.2rem;
-	  background-color: aliceblue;
-    border: 1px solid #0b3d91;
-    color: #0b3d91;
-    border-radius: 6px;
-    padding: 0.4rem 0.8rem;
-    }
-    button:hover {
-    background-color: #a1c9eb;
+  margin: 0.5rem;
+  padding: 0.6rem 1.2rem;
+  background-color: aliceblue;
+  border: 1px solid #0b3d91;
+  color: #0b3d91;
+  border-radius: 6px;
+  padding: 0.4rem 0.8rem;
 }
-  
+button:hover {
+  background-color: #a1c9eb;
+}
 
 /* Títulos */
 .section-title {
@@ -58,7 +62,8 @@
 }
 
 /* Listas */
-.evento-list, .usuario-list {
+.evento-list,
+.usuario-list {
   list-style: none;
   padding: 0;
   margin: 0;
@@ -99,7 +104,6 @@
   white-space: pre-wrap;
 }
 
-
 .participantes-list {
   list-style: none;
   padding: 0;
@@ -122,7 +126,6 @@
 .participantes-list li:hover {
   background-color: #eef3fb;
 }
-
 
 /* Usuario específico */
 .usuario-nombre {
